<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kalori Takip</string>
    <string name="privacy_policy_title">Gizlilik Politikası</string>
    <string name="privacy_shortcut_short">Gizlilik</string>
    <string name="privacy_shortcut_long">Gizlilik Politikası</string>
    <string name="wellness_shortcut_short">Sağlık</string>
    <string name="wellness_shortcut_long">Sağlık ve Akıllı Takip</string>
    <string name="voice_shortcut_short">Sesle Ekle</string>
    <string name="voice_shortcut_long">Sesle Yemek Ekle</string>
    <string name="recipe_shortcut_short">Tarif Oluştur</string>
    <string name="recipe_shortcut_long">Tarif / Öğün Oluştur</string>
</resources>
